--- a/Style.css
+++ b/Style.css
@@ -5,40 +5,86 @@ html {
 * {
     box-sizing: border-box;
 }
+#titulo {
+    margin: 15px auto;
+    width: 35%;
+    height: 5%;
+    display: block;
+    text-align: center;
+    font-size: 2.5rem;
+    color: orangered;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 50px;
+    transition: 0.7s;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.9);
+}
+#titulo h1{
+    font-size: 1.5em;
+    border: solid 1px orangered;
+    border-radius: 50px;
+}
+#titulo:hover {
+    box-shadow: 5px 9px 17px orangered;
+    background-color: rgba(216, 216, 96, 0.356);
+    transition: 0.8s;
+    color: orange;
+}
 
 body {
-    margin: 0px;
+
+    /* background-image: url(img/Wallpaper.jpg);
+    image-resolution: unset;
+    background-position: 50%;
+    background-size: cover; */
     background-color: rgb(204, 206, 191);
-    border: 2px solid black;  
-    padding: 0px 10px;
+    margin: 0px;
+    padding: 0px;
 }
 
 button {
     font-size: 1em;
     font-weight: bold;
     padding: 3px 10px;
-    border-radius: 15px;
-    border: 2px solid orangered;
+    border-radius: 20px;
+    border: 1px solid white;
     box-shadow: 2px 2px 5px orangered;
     background-color: orangered;
     color: white;
+    transition: 0.7s;
 }
 button:hover {
-    background-color: rgb(241, 153, 70);
-    transition: 0.4s;
+    background-color: rgba(216, 216, 96, 0.356);
+    transition: 0.7s;
+    cursor: pointer;
 }
 .container {
     max-width: 1400px;
-    margin: auto;
-    
+    margin: auto; 
+}
+.container img {
+    width: 300px;
+    height: 300px;
+    border-radius: 90px;
+    border: solid 1px rgba(216, 216, 96, 0.356);
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+
 }
 header {
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.7);
     color: orangered;
-    border: 2px solid orangered;
-    margin: 0px;
-    padding: 10px;
-    display: flex;
+    border: 1px solid orangered;
+    height: 50px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
+    transition: 0.7s;
+   
+    /* display: flex; */
+}
+header:hover {
+    box-shadow: 2px 7px 15px orangered;
+    background-color: rgba(216, 216, 96, 0.356);
+    transition: 0.7s;
 }
 header .container {
     display: flex;
@@ -49,45 +95,60 @@ header .container {
     display: flex;
     flex-direction: column;
     text-align: center;
-    
 }
 header a{
-    padding: 5px 10px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    margin: 5px;
     text-decoration: none;
     font-weight: bold;
     color: white;
+    text-align: center;
 }
 header .logo {
     margin: 0;
     font-weight: bold;
     color: orangered;
-    font-size: 2em;
+    font-size: 2.2em;
+    padding-bottom: 20px;
+    padding-left: 15px;
 }
 header a:hover{
     color: orangered;
 }
-header h1 {
-    font-size: 3.5rem;
-    text-align: center; 
+#post {
+    background-color: rgb(161, 165, 148);
+    border-radius: 50px;
+    border: solid 2px orangered;
+    margin: 50px;
+    width: 95%;
+    transition: 0.7s;
+    box-shadow: 5px 5px 10px black;
+}
+#post:hover{
+    box-shadow: 4px 4px 15px orangered;
+    background-color: rgba(216, 216, 96, 0.356);
+    transition: 0.7s;
+    
 }
 #post .container {
-    margin: 4px;
-    padding: 2px;
+    margin: 8px;
     width: 320px;
-    height: 690px;
-    border: solid 2px orangered;
+    height: 600px;
+    border: solid 1px orangered;
     border-radius: 20px;
     background-color: rgba(0,0,0,0.8);
+    box-shadow: 4px 4px 10px rgb(0, 0, 0);
     overflow: hidden;
     align-self: center;
     text-align: center;
     display: inline-block;
+    transition: 0.7s;
 }
 #post .container:hover {
-    box-shadow: 4px 4px 10px;
-    color: orangered;
-    cursor: pointer;
+    box-shadow: 5px 5px 16px orangered;
     background-color: rgba(230, 151, 62, 0.877);
+    transition: 0.5s;
 }
 #post h2  {
     font-size: 1.3em;
@@ -98,15 +159,43 @@ header h1 {
     font-size: 14px;
     color: white;
     text-align: center;
+    font-weight: bold;
+    padding: 2px 10px;
+}
+#post h2:hover {
+    color: orangered;
+    transition: 0.3s;
 }
 #post ul {
-    text-align: center;
+    text-align: justify;
+    list-style-position: inside;
     color:orangered;
     font-weight: bold;
+    display: flex;
+    flex-direction: column;
     list-style: none;
-    padding-left: 1px;
+    /* padding-left: 25px; */
+    /* display: flex;
+    margin: 2px; */
 }
-
+#post .container table {
+    font-weight: bold;
+    text-align: center;
+    color: orangered;
+    margin: 0px;
+    padding-right: 15px;
+    align-items: center;
+    justify-content: center;
+    min-width: 20vh;
+}
+td {
+    padding: 3px 9px;
+    margin: 0px;
+    text-align: center;
+}
+.container button {
+    position:static;
+}
 footer {
     background-color: rgba(0,0,0,0.9);
     padding: 20px;
@@ -130,12 +219,43 @@ footer a:hover {
     color: yellow;
 }
 
-@media (min-width: 720px) {
+#nosotros {
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+    ) , url(img/pizza5.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 20px;
+    border: solid 1.5px orangered;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.9);
+    
+}
+#nosotros h3{
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+
+@media (min-width: 800px) {
 header {
     position: fixed;
     width: 100%;
     margin: 0%;
     padding: 5px;
+}
+body{
+    margin: 0px;
 }
 header .container {
     flex-direction: row;
@@ -158,5 +278,4 @@ header .logo {
     padding: 10px 20px;
     margin: auto;
 }
-
 } 
