--- a/Style.css
+++ b/Style.css
@@ -78,7 +78,8 @@ header {
     height: 50px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s;
-   
+    flex-direction: column;
+    align-items: center;   
     /* display: flex; */
 }
 header:hover {
@@ -187,6 +188,11 @@ header a:hover{
     align-items: center;
     justify-content: center;
     min-width: 20vh;
+}
+#post .ingredientes {
+    text-align: center;
+    color: orangered;
+    font-size: bold;
 }
 td {
     padding: 3px 9px;
