--- a/Style.css
+++ b/Style.css
@@ -20,7 +20,7 @@ html {
 }
 #titulo h1{
     font-size: 1.5em;
-    border: solid 1px orangered;
+    border: solid 1px orange;
     border-radius: 50px;
 }
 #titulo:hover {
@@ -51,6 +51,7 @@ button {
     background-color: orangered;
     color: white;
     transition: 0.7s;
+    display: none;
 }
 button:hover {
     background-color: rgba(216, 216, 96, 0.356);
@@ -63,7 +64,7 @@ button:hover {
 }
 .container img {
     width: 300px;
-    height: 300px;
+    height: 250px;
     border-radius: 90px;
     border: solid 1px rgba(216, 216, 96, 0.356);
     padding: 1px;
@@ -74,7 +75,7 @@ button:hover {
 header {
     background-color: rgba(0,0,0,0.7);
     color: orangered;
-    border: 1px solid orangered;
+    border: 1px solid orange;
     height: 50px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s;
@@ -120,7 +121,7 @@ header a:hover{
 #post {
     background-color: rgb(161, 165, 148);
     border-radius: 50px;
-    border: solid 2px orangered;
+    border: solid 2px orange;
     margin: 50px;
     width: 95%;
     transition: 0.7s;
@@ -135,8 +136,8 @@ header a:hover{
 #post .container {
     margin: 8px;
     width: 320px;
-    height: 600px;
-    border: solid 1px orangered;
+    height: 500px;
+    border: solid 1px orange;
     border-radius: 20px;
     background-color: rgba(0,0,0,0.8);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
