--- a/Style.css
+++ b/Style.css
@@ -7,19 +7,19 @@ html {
 }
 #titulo {
     margin: 15px auto;
-    width: 35%;
+    width: 25%;
     height: 5%;
     display: block;
     text-align: center;
     font-size: 2.5rem;
     color: orangered;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.7);
     border-radius: 50px;
     transition: 0.7s;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.9);
 }
 #titulo h1{
-    font-size: 1.5em;
+    font-size: 1.2em;
     border: solid 1px orange;
     border-radius: 50px;
 }
@@ -70,7 +70,15 @@ button:hover {
     padding: 1px;
     background-size: cover;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
-
+}
+.container2 img {
+    width: 250px;
+    height: 200px;
+    border-radius: 90px;
+    border: solid 1px rgba(216, 216, 96, 0.356);
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
 }
 header {
     background-color: rgba(0,0,0,0.7);
@@ -147,7 +155,26 @@ header a:hover{
     display: inline-block;
     transition: 0.7s;
 }
+#post .container2 {
+    margin: 8px;
+    width: 320px;
+    height: 500px;
+    border: solid 1px orange;
+    border-radius: 20px;
+    background-color: rgba(0,0,0,0.8);
+    box-shadow: 4px 4px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    align-self: center;
+    text-align: center;
+    display: inline-block;
+    transition: 0.7s;
+}
 #post .container:hover {
+    box-shadow: 5px 5px 16px orangered;
+    background-color: rgba(230, 151, 62, 0.877);
+    transition: 0.5s;
+}
+#post .container2:hover {
     box-shadow: 5px 5px 16px orangered;
     background-color: rgba(230, 151, 62, 0.877);
     transition: 0.5s;
@@ -168,32 +195,17 @@ header a:hover{
     color: orangered;
     transition: 0.3s;
 }
-#post ul {
-    text-align: justify;
-    list-style-position: inside;
-    color:orangered;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    /* padding-left: 25px; */
-    /* display: flex;
-    margin: 2px; */
-}
-#post .container table {
-    font-weight: bold;
-    text-align: center;
-    color: orangered;
-    margin: 0px;
-    padding-right: 15px;
-    align-items: center;
-    justify-content: center;
-    min-width: 20vh;
-}
 #post .ingredientes {
     text-align: center;
     color: orangered;
     font-size: bold;
+}
+#post .ingredientes2 {
+
+    text-align: center;
+    color: orangered;
+    padding-bottom: 100000px;
+    margin: 0;
 }
 td {
     padding: 3px 9px;
@@ -248,11 +260,26 @@ footer a:hover {
     
 }
 #nosotros h3{
+    font-size: 1.5rem;
     color: white;
     font-weight: bold;
     text-align: center;
 }
-
+#nosotros p {
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: white;
+}
+#nosotros a {
+    font-size: 1.3rem;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+}
+#nosotros a:hover{
+    color: orangered;
+}
 
 @media (min-width: 800px) {
 header {
