--- a/Style.css
+++ b/Style.css
@@ -8,24 +8,27 @@ html {
 #titulo {
     margin: 15px auto;
     width: 25%;
-    height: 5%;
+    height: 1%;
     display: block;
     text-align: center;
     font-size: 2.5rem;
-    color: orangered;
-    background-color: rgba(0,0,0,0.7);
-    border-radius: 50px;
+    color: rgb(255, 60, 0);
+    background-image: linear-gradient(
+        10000000000000000000000deg,
+        rgba(0, 0, 0, 0.89),
+        rgba(26, 25, 25, 0.4) 
+        ), url(img/pizza5.jpg);
+        background-position: center;
     transition: 0.7s;
+    border-radius: 100px;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.9);
 }
 #titulo h1{
     font-size: 1.2em;
-    border: solid 1px orange;
     border-radius: 50px;
 }
 #titulo:hover {
-    box-shadow: 5px 9px 17px orangered;
-    background-color: rgba(216, 216, 96, 0.356);
+    box-shadow: 2px 2px 7px orange;
     transition: 0.8s;
     color: orange;
 }
@@ -36,7 +39,11 @@ body {
     image-resolution: unset;
     background-position: 50%;
     background-size: cover; */
-    background-color: rgb(204, 206, 191);
+    background: linear-gradient(
+        100deg,
+        rgba(250, 200, 167, 0.219),
+        rgba(250, 135, 69, 0.3)
+        );
     margin: 0px;
     padding: 0px;
 }
@@ -63,27 +70,33 @@ button:hover {
     margin: auto; 
 }
 .container img {
-    width: 300px;
-    height: 250px;
-    border-radius: 90px;
-    border: solid 1px rgba(216, 216, 96, 0.356);
+    width: 320px;
+    height: 260px;
+    border-radius: 10px;
+    /* border: solid 1px orange; */
     padding: 1px;
     background-size: cover;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
 }
 .container2 img {
-    width: 250px;
+    width: 308px;
     height: 200px;
-    border-radius: 90px;
-    border: solid 1px rgba(216, 216, 96, 0.356);
+    border-radius: 10px;
+    /* border: solid 1px orange; */
     padding: 1px;
     background-size: cover;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
 }
 header {
-    background-color: rgba(0,0,0,0.7);
+    background-image: linear-gradient(
+        10000000000000000000000deg,
+        rgba(7, 7, 7, 0.9),
+        rgba(88, 87, 87, 0.5)
+        ) ,url(img/wall.jpg);
+        background-position: center;
+    /* background-color: rgba(0,0,0,0.7); */
     color: orangered;
-    border: 1px solid orange;
+    /* border: 1px solid white; */
     height: 50px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s;
@@ -92,7 +105,7 @@ header {
     /* display: flex; */
 }
 header:hover {
-    box-shadow: 2px 7px 15px orangered;
+    box-shadow: 2px 2px 10px orange;
     background-color: rgba(216, 216, 96, 0.356);
     transition: 0.7s;
 }
@@ -119,7 +132,7 @@ header .logo {
     margin: 0;
     font-weight: bold;
     color: orangered;
-    font-size: 2.2em;
+    font-size: 2.25em;
     padding-bottom: 20px;
     padding-left: 15px;
 }
@@ -127,27 +140,33 @@ header a:hover{
     color: orangered;
 }
 #post {
-    background-color: rgb(161, 165, 148);
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.25),
+        rgba(0, 0, 0, 0.25)
+        ) ,url(img/wall2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-position: center; */
     border-radius: 50px;
-    border: solid 2px orange;
+    /* border: solid 2px orange; */
     margin: 50px;
     width: 95%;
     transition: 0.7s;
     box-shadow: 5px 5px 10px black;
 }
 #post:hover{
-    box-shadow: 4px 4px 15px orangered;
-    background-color: rgba(216, 216, 96, 0.356);
+    /* box-shadow: 4px 4px 15px orangered;
+    background-color: rgba(216, 216, 96, 0.356); */
     transition: 0.7s;
-    
 }
 #post .container {
     margin: 8px;
-    width: 320px;
+    width: 328px;
     height: 500px;
-    border: solid 1px orange;
-    border-radius: 20px;
-    background-color: rgba(0,0,0,0.8);
+    /* border: solid 1px orange; */
+    border-radius: 1px;
+    background-color: rgba(0,0,0,0.6);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
     overflow: hidden;
     align-self: center;
@@ -159,9 +178,9 @@ header a:hover{
     margin: 8px;
     width: 320px;
     height: 500px;
-    border: solid 1px orange;
+    /* border: solid 1px orange; */
     border-radius: 20px;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.5);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
     overflow: hidden;
     align-self: center;
@@ -170,13 +189,13 @@ header a:hover{
     transition: 0.7s;
 }
 #post .container:hover {
-    box-shadow: 5px 5px 16px orangered;
-    background-color: rgba(230, 151, 62, 0.877);
+    box-shadow: 2px 2px 10px orange;
+    background-color: rgba(247, 200, 147, 0.9);
     transition: 0.5s;
 }
 #post .container2:hover {
-    box-shadow: 5px 5px 16px orangered;
-    background-color: rgba(230, 151, 62, 0.877);
+    box-shadow: 5px 5px 16px orange;
+    background-color: rgba(247, 200, 147, 0.9);
     transition: 0.5s;
 }
 #post h2  {
@@ -207,14 +226,7 @@ header a:hover{
     padding-bottom: 100000px;
     margin: 0;
 }
-td {
-    padding: 3px 9px;
-    margin: 0px;
-    text-align: center;
-}
-.container button {
-    position:static;
-}
+
 footer {
     background-color: rgba(0,0,0,0.9);
     padding: 20px;
@@ -255,7 +267,6 @@ footer a:hover {
     background-size: cover;
     background-position: center center;
     border-radius: 20px;
-    border: solid 1.5px orangered;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.9);
     
 }
