--- a/Style.css
+++ b/Style.css
@@ -15,9 +15,9 @@ html {
     color: rgb(255, 60, 0);
     background-image: linear-gradient(
         10000000000000000000000deg,
-        rgba(0, 0, 0, 0.89),
-        rgba(26, 25, 25, 0.4) 
-        ), url(img/pizza5.jpg);
+        rgba(0, 0, 0, 0.7),
+        rgba(160, 159, 159, 0.4) 
+        ), url(img/tit.jpg);
         background-position: center;
     transition: 0.7s;
     border-radius: 100px;
@@ -90,7 +90,7 @@ button:hover {
 header {
     background-image: linear-gradient(
         10000000000000000000000deg,
-        rgba(7, 7, 7, 0.9),
+        rgba(0, 1, 0, 0.9),
         rgba(88, 87, 87, 0.5)
         ) ,url(img/wall.jpg);
         background-position: center;
@@ -166,7 +166,7 @@ header a:hover{
     height: 500px;
     /* border: solid 1px orange; */
     border-radius: 1px;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.79);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
     overflow: hidden;
     align-self: center;
