--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@ html {
     box-sizing: border-box;
 }
 #titulo {
-    margin: 15px auto;
+    margin: 30px auto;
     width: 25%;
     height: 1%;
     display: block;
@@ -77,9 +77,14 @@ button:hover {
     padding: 1px;
     background-size: cover;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
 }
 .container img:hover {
-    zoom: 105%;
+    width: 350px;
+    height: 330px;
+    cursor: crosshair;
+    transition: .9s ease ;
+    filter: contrast(120%);
     overflow: hidden;
     align-items: center;
 }
@@ -87,10 +92,10 @@ button:hover {
     width: 308px;
     height: 200px;
     border-radius: 10px;
-    /* border: solid 1px orange; */
     padding: 1px;
     background-size: cover;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
 }
 header {
     background-image: linear-gradient(
@@ -102,7 +107,7 @@ header {
     /* background-color: rgba(0,0,0,0.7); */
     color: orangered;
     /* border: 1px solid white; */
-    height: 50px;
+    height: 55px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s;
     flex-direction: column;
@@ -149,7 +154,7 @@ header a:hover{
         0deg,
         rgba(0, 0, 0, 0.25),
         rgba(0, 0, 0, 0.25)
-        ) ,url(img/wall2.jpg);
+        ) ,url(img/wall2.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: center; */
@@ -157,7 +162,7 @@ header a:hover{
     /* border: solid 2px orange; */
     margin: 50px;
     width: 95%;
-    transition: 0.7s;
+    transition: 0.7s ease;
     box-shadow: 5px 5px 10px black;
 }
 #post:hover{
@@ -191,19 +196,27 @@ header a:hover{
     align-self: center;
     text-align: center;
     display: inline-block;
-    transition: 0.7s;
+    transition: 0.9s ease;
 }
 #post .container:hover {
     box-shadow: 2px 2px 10px orange;
     background-color: rgba(247, 200, 147, 0.9);
-    transition: 0.5s;
-    zoom: 110%;
+    transition: 0.9s ease;
+    width: 360px;
+    height: 580px;
 }
+
 #post .container2:hover {
     box-shadow: 5px 5px 16px orange;
     background-color: rgba(247, 200, 147, 0.9);
-    transition: 0.5s;
-    zoom: 110%;
+    transition: 0.9 ease;
+    width: 350px;
+    height: 530px;
+}
+#post .container2 img:hover{
+    width: 340px;
+    height: 240px;
+    transition: .9s ease;
 }
 #post h2  {
     font-size: 1.3em;
@@ -233,7 +246,25 @@ header a:hover{
     padding-bottom: 100000px;
     margin: 0;
 }
-
+.galeria {
+    margin: 0 auto;
+    padding: 20px 1px;
+    display: flex;
+    width: 100%;
+    height: 40%;
+}
+.galeria img {
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .9s ease;
+}
+.galeria img:hover{
+    width: 200px;
+    opacity: 1;
+    filter: contrast(120%);
+}
 footer {
     background-color: rgba(0,0,0,0.9);
     padding: 20px;
