--- a/Style.css
+++ b/Style.css
@@ -6,31 +6,57 @@ html {
     box-sizing: border-box;
 }
 #titulo {
-    margin: 30px auto;
-    width: 25%;
-    height: 1%;
-    display: block;
+    margin: 15px auto;
+    width: 90%;
+    height: 0%;
+    display: flex;
+    flex-direction: row;
     text-align: center;
-    font-size: 2.5rem;
     color: rgb(255, 60, 0);
     background-image: linear-gradient(
         10000000000000000000000deg,
-        rgba(0, 0, 0, 0.7),
-        rgba(160, 159, 159, 0.4) 
-        ), url(img/tit.jpg);
-        background-position: center;
-    transition: 0.7s;
-    border-radius: 100px;
+        rgba(0, 0, 0, 0.3),
+        rgba(160, 159, 159, 0.2) 
+        ), url(img/titulo.jfif);
+    background-position: center;
+    transition: 0.7 ease;
+    border-radius: 5px;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.9);
+    transition: 0.7s ease;
+}
+#titulo .img1 {
+    margin: 2px;
+    width: 150px;
+    height: 130px;
+    align-items: left;
+    display: flex;
+    flex-direction: row;
+    border-radius: 30px;
+}
+#titulo .img2{
+    margin: 3px;
+    width: 150px;
+    height: 130px;
+    align-items: right;
+    display: flex;
+    flex-direction: row;
+    border-radius: 30px;
 }
 #titulo h1{
-    font-size: 1.2em;
-    border-radius: 50px;
+    padding-right: 50px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    font-size: 3rem;
+   /*  text-align: center;
+    justify-content: center;
+    align-items: center; */
 }
 #titulo:hover {
     box-shadow: 2px 2px 7px orange;
-    transition: 0.8s;
+    
     color: orange;
+    opacity: 0.7;
 }
 
 body {
@@ -104,25 +130,26 @@ header {
         rgba(88, 87, 87, 0.5)
         ) ,url(img/wall.jpg);
         background-position: center;
-    /* background-color: rgba(0,0,0,0.7); */
     color: orangered;
-    /* border: 1px solid white; */
     height: 55px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
-    transition: 0.7s;
+    transition: 0.7s ease;
     flex-direction: column;
-    align-items: center;   
+    align-items: center;  
+    opacity: 0.9; 
     /* display: flex; */
 }
 header:hover {
     box-shadow: 2px 2px 10px orange;
     background-color: rgba(216, 216, 96, 0.356);
-    transition: 0.7s;
+    transition: 0.7s ease;
+    opacity: 1;
 }
 header .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
  header nav {
     display: flex;
@@ -161,7 +188,7 @@ header a:hover{
     border-radius: 50px;
     /* border: solid 2px orange; */
     margin: 50px;
-    width: 95%;
+    width: 99.5%;
     transition: 0.7s ease;
     box-shadow: 5px 5px 10px black;
 }
