--- a/Style.css
+++ b/Style.css
@@ -136,7 +136,6 @@ header {
     transition: 0.7s ease;
     flex-direction: column;
     align-items: center;  
-    opacity: 0.9; 
     /* display: flex; */
 }
 header:hover {
@@ -327,7 +326,7 @@ footer a:hover {
     0deg,
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
-    ) , url(img/pizza5.jpg);
+    ) , url(img/place.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -357,7 +356,7 @@ footer a:hover {
     color: orangered;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 720px) {
 header {
     position: fixed;
     width: 100%;
