--- a/Style.css
+++ b/Style.css
@@ -329,7 +329,7 @@ footer a:hover {
     ) , url(img/place.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: right right;
     border-radius: 20px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.9);
     
