--- a/Style.css
+++ b/Style.css
@@ -315,7 +315,7 @@ footer a:hover {
 }
 
 #nosotros {
-    height: 90vh;
+    /* height: 90vh; */
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -329,7 +329,7 @@ footer a:hover {
     ) , url(img/place.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: right right;
+    background-position: center center;
     border-radius: 20px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.9);
     
