--- a/Style.css
+++ b/Style.css
@@ -315,21 +315,21 @@ footer a:hover {
 }
 
 #nosotros {
-    /* height: 90vh; */
+    height: 700px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin: 30px;
     background-image: linear-gradient(
     0deg,
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
     ) , url(img/place.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+    /* background-repeat: no-repeat; */
+    background-size: cover;  
+    background-position: center center; 
     border-radius: 20px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.9);
     
