--- a/Style.css
+++ b/Style.css
@@ -106,10 +106,10 @@ button:hover {
     transition: .9s ease;
 }
 .container img:hover {
-    width: 350px;
-    height: 330px;
+    width: 325px;
+    height: 296px;
     cursor: crosshair;
-    transition: .9s ease ;
+    transition: 1.1s ease ;
     filter: contrast(120%);
     overflow: hidden;
     align-items: center;
@@ -199,7 +199,7 @@ header a:hover{
 #post .container {
     margin: 8px;
     width: 328px;
-    height: 500px;
+    height: 475px;
     /* border: solid 1px orange; */
     border-radius: 1px;
     background-color: rgba(0,0,0,0.79);
@@ -208,12 +208,12 @@ header a:hover{
     align-self: center;
     text-align: center;
     display: inline-block;
-    transition: 0.7s;
+    transition: 1.5s ease;
 }
 #post .container2 {
     margin: 8px;
     width: 320px;
-    height: 500px;
+    height: 475px;
     /* border: solid 1px orange; */
     border-radius: 20px;
     background-color: rgba(0,0,0,0.5);
@@ -222,22 +222,22 @@ header a:hover{
     align-self: center;
     text-align: center;
     display: inline-block;
-    transition: 0.9s ease;
+    transition: 1.5s ease;
 }
 #post .container:hover {
+    color: red;
     box-shadow: 2px 2px 10px orange;
-    background-color: rgba(247, 200, 147, 0.9);
-    transition: 0.9s ease;
-    width: 360px;
-    height: 580px;
+    background-color: rgba(242, 248, 150, 0.9);
+    transition: 1.5s ease;
+    width: 350px;
+    height: 510px;
 }
-
 #post .container2:hover {
     box-shadow: 5px 5px 16px orange;
-    background-color: rgba(247, 200, 147, 0.9);
-    transition: 0.9 ease;
+    background-color: rgba(242, 248, 150, 0.9);
+    transition: 1.5s ease;
     width: 350px;
-    height: 530px;
+    height: 510px;
 }
 #post .container2 img:hover{
     width: 340px;
@@ -284,7 +284,7 @@ header a:hover{
     flex-grow: 1;
     object-fit: cover;
     opacity: .8;
-    transition: .9s ease;
+    transition: 1.5s ease;
 }
 .galeria img:hover{
     width: 200px;
