--- a/Style.css
+++ b/Style.css
@@ -227,14 +227,14 @@ header a:hover{
 #post .container:hover {
     color: red;
     box-shadow: 2px 2px 10px orange;
-    background-color: rgba(242, 248, 150, 0.9);
+    background-color: rgba(242, 248, 150, 0.7);
     transition: 1.5s ease;
     width: 350px;
     height: 510px;
 }
 #post .container2:hover {
     box-shadow: 5px 5px 16px orange;
-    background-color: rgba(242, 248, 150, 0.9);
+    background-color: rgba(242, 248, 150, 0.7);
     transition: 1.5s ease;
     width: 350px;
     height: 510px;
@@ -315,8 +315,9 @@ footer a:hover {
 }
 
 #nosotros {
-    height: 700px;
-    width: 100%;
+    margin: 0 auto;
+    height: 610px;
+    width: 96%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -339,23 +340,41 @@ footer a:hover {
     color: white;
     font-weight: bold;
     text-align: center;
+    transition: .6s ease;
 }
 #nosotros p {
     font-size: 1.4rem;
     font-weight: bold;
     color: white;
+    text-align: center;
+    transition: .6s ease;
 }
+/* #nosotros p:hover{
+    transition: .5s ease;
+    color: orangered;
+} */
 #nosotros a {
     font-size: 1.3rem;
     text-decoration: none;
     font-weight: bold;
     color: white;
     text-align: center;
+    transition: .6s ease;
 }
 #nosotros a:hover{
+    transition: .5s ease;
     color: orangered;
 }
-
+#nosotros .descrip {
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+#nosotros span{
+    color: orangered;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 @media (min-width: 720px) {
 header {
     position: fixed;
