--- a/Style.css
+++ b/Style.css
@@ -96,8 +96,8 @@ button:hover {
     margin: auto; 
 }
 .container img {
-    width: 320px;
-    height: 260px;
+    width: 400px;
+    height: 310px;
     border-radius: 10px;
     /* border: solid 1px orange; */
     padding: 1px;
@@ -106,8 +106,8 @@ button:hover {
     transition: .9s ease;
 }
 .container img:hover {
-    width: 325px;
-    height: 296px;
+    width: 420px;
+    height: 330px;
     cursor: crosshair;
     transition: 1.1s ease ;
     filter: contrast(120%);
@@ -115,8 +115,8 @@ button:hover {
     align-items: center;
 }
 .container2 img {
-    width: 308px;
-    height: 200px;
+    width: 380px;
+    height: 260px;
     border-radius: 10px;
     padding: 1px;
     background-size: cover;
@@ -124,8 +124,8 @@ button:hover {
     transition: .9s ease;
 }
 .container3 img {
-    width: 300px;
-    height: 240px;
+    width: 360px;
+    height: 310px;
     border-radius: 10px;
     padding: 1px;
     background-size: cover;
@@ -140,7 +140,6 @@ header {
         ) ,url(img/wall.jpg);
         background-position: center;
     color: orangered;
-    height: 55px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s ease;
     flex-direction: column;
@@ -193,17 +192,18 @@ header a:hover{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     object-fit: cover;
-    border-radius: 50px;
+    border-radius: 20px;
     
-    margin: 50px auto;
-    width: 95%;
+    margin: auto;
+    width: 100%;
+    height: 100%;
     transition: 0.7s ease;
     box-shadow: 5px 5px 10px black;
 }
 #post .container {
     margin: 8px;
-    width: 328px;
-    height: 530px;
+    width: 420px;
+    height: 650px;
     border-radius: 1px;
     background-color: rgba(0,0,0,0.79);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
@@ -215,8 +215,8 @@ header a:hover{
 }
 #post .container2 {
     margin: 8px;
-    width: 320px;
-    height: 530px;
+    width: 420px;
+    height: 650px;
     border-radius: 1px;
     background-color: rgba(0,0,0,0.79);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
@@ -228,8 +228,8 @@ header a:hover{
 }
 #post .container3 {
     margin: 8px;
-    width: 328px;
-    height: 420px;
+    width: 410px;
+    height: 535px;
     border-radius: 1px;
     background-color: rgba(0,0,0,0.79);
     box-shadow: 4px 4px 10px rgb(0, 0, 0);
@@ -243,31 +243,31 @@ header a:hover{
     box-shadow: 2px 2px 10px orange;
     background-color: rgba(242, 248, 150, 0.7);
     transition: 1.5s ease;
-    width: 350px;
-    height: 545px;
+    width: 440px;
+    height: 670px;
 }
 #post .container2:hover {
     box-shadow: 5px 5px 16px orange;
     background-color: rgba(242, 248, 150, 0.7);
     transition: 1.5s ease;
-    width: 350px;
-    height: 545px;
+    width: 440px;
+    height: 670px;
 }
 #post .container3:hover {
     box-shadow: 2px 2px 10px orange;
     background-color: rgba(242, 248, 150, 0.7);
     transition: 1.5s ease;
-    width: 340px;
-    height: 435px;
+    width: 430px;
+    height: 550px;
 }
 #post .container2 img:hover{
-    width: 340px;
-    height: 240px;
+    width: 400px;
+    height: 280px;
     transition: .9s ease;
 }
 #post .container3 img:hover{
-    width: 320px;
-    height: 250px;
+    width: 400px;
+    height: 280px;
     transition: .9s ease;
 }
 #post h2  {
@@ -276,7 +276,7 @@ header a:hover{
     text-align: center;
 }
 #post p {
-    font-size: 18px;
+    font-size: 20px;
     color: white;
     text-align: center;
     font-weight: bold;
@@ -290,6 +290,7 @@ header a:hover{
     text-align: center;
     color: orangered;
     font-size: bold;
+    padding-bottom: 10px;
 }
 #post .ingredientes2 {
 
@@ -299,7 +300,7 @@ header a:hover{
     margin: 0;
 }
 #post div a {
-    font-size: 1rem;
+    font-size: 1.25rem;
     text-decoration: none;
     font-weight: bold;
     color: white;
@@ -357,9 +358,10 @@ footer a:hover {
 }
 
 #nosotros {
-    margin: 0 auto;
-    height: 610px;
-    width: 96%;
+    margin: 20px auto;
+    padding: 10px 20px;
+    height: 650px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -433,6 +435,7 @@ footer a:hover {
 header {
     position: fixed;
     width: 100%;
+    height: 55px;
     margin: 0%;
     padding: 5px;
 }
@@ -459,6 +462,68 @@ header .logo {
     justify-content: center;
     padding: 10px 20px;
     margin: auto;
+    width: 95%;
+    border-radius: 50px;
+}
+#post .container {
+    margin: 8px;
+    width: 328px;
+    height: 530px;
+    border-radius: 1px;
+    background-color: rgba(0,0,0,0.79);
+    box-shadow: 4px 4px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    align-self: center;
+    text-align: center;
+    display: inline-block;
+    transition: 1.5s ease;
+}
+#post .container:hover {
+    box-shadow: 2px 2px 10px orange;
+    background-color: rgba(242, 248, 150, 0.7);
+    transition: 1.5s ease;
+    width: 350px;
+    height: 550px;
+}
+#post .container2 {
+    margin: 8px;
+    width: 320px;
+    height: 530px;
+    border-radius: 1px;
+    background-color: rgba(0,0,0,0.79);
+    box-shadow: 4px 4px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    align-self: center;
+    text-align: center;
+    display: inline-block;
+    transition: 1.5s ease;
+}
+#post .container2:hover {
+    box-shadow: 2px 2px 10px orange;
+    background-color: rgba(242, 248, 150, 0.7);
+    transition: 1.5s ease;
+    width: 350px;
+    height: 550px;
+}
+#post .container3 {
+    margin: 8px;
+    width: 328px;
+    height: 410px;
+    border-radius: 1px;
+    background-color: rgba(0,0,0,0.79);
+    box-shadow: 4px 4px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    align-self: center;
+    text-align: center;
+    display: inline-block;
+    transition: 1.5s ease;
+}
+#post .container3:hover {
+    box-shadow: 2px 2px 10px orange;
+    background-color: rgba(242, 248, 150, 0.7);
+    transition: 1.5s ease;
+    width: 350px;
+    height: 430px;
 }
 #post p {
     font-size: 14px;
@@ -466,5 +531,80 @@ header .logo {
     text-align: center;
     font-weight: bold;
     padding: 2px 10px;
+}
+.container img {
+    width: 320px;
+    height: 270px;
+    border-radius: 10px;
+    /* border: solid 1px orange; */
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
+}
+.container img:hover {
+    width: 340px;
+    height: 290px;
+    cursor: crosshair;
+    transition: 1.1s ease ;
+    filter: contrast(120%);
+    overflow: hidden;
+    align-items: center;
+}
+#post .container2 img {
+    width: 310px;
+    height: 210px;
+    border-radius: 10px;
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
+}
+#post .container2 img:hover {
+    width: 330px;
+    height: 230px;
+    cursor: crosshair;
+    transition: 1.1s ease ;
+    filter: contrast(120%);
+    overflow: hidden;
+    align-items: center;
+}
+#post .container3 img {
+    width: 290px;
+    height: 230px;
+    border-radius: 10px;
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
+}
+#post .container3 img:hover {
+    width: 300px;
+    height: 240px;
+    border-radius: 10px;
+    padding: 1px;
+    background-size: cover;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+    transition: .9s ease;
+}
+#post div a {
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    transition: .6s ease;
+    border: solid 1px white;
+    border-radius: 10px;
+    margin: 10px auto;
+    padding: 5px 10px;
+}
+#post div a:hover {
+    transition: .5s ease;
+    color: orangered;
+}
+#nosotros {
+    width: 90%;
+    height: 600px;
 }
 } 
