--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,22 @@
 html {
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
+    width: fit-content;
 }
 * {
     box-sizing: border-box;
+}
+body {
+    background: linear-gradient(
+        100deg,
+        rgba(250, 200, 167, 0.219),
+        rgba(250, 135, 69, 0.3)
+        );
+    margin: 0;
+}
+.container{
+    max-width: 1400px;
+    margin: auto;
 }
 #titulo {
     margin: 15px auto;
@@ -28,7 +41,6 @@ html {
     margin: 2px;
     width: 150px;
     height: 130px;
-    align-items: left;
     display: flex;
     flex-direction: row;
     border-radius: 30px;
@@ -37,7 +49,6 @@ html {
     margin: 3px;
     width: 150px;
     height: 130px;
-    align-items: right;
     display: flex;
     flex-direction: row;
     border-radius: 30px;
@@ -48,9 +59,6 @@ html {
     display: flex;
     flex-direction: row;
     font-size: 3rem;
-   /*  text-align: center;
-    justify-content: center;
-    align-items: center; */
 }
 #titulo:hover {
     box-shadow: 2px 2px 7px orange;
@@ -58,22 +66,6 @@ html {
     color: orange;
     opacity: 0.7;
 }
-
-body {
-
-    /* background-image: url(img/Wallpaper.jpg);
-    image-resolution: unset;
-    background-position: 50%;
-    background-size: cover; */
-    background: linear-gradient(
-        100deg,
-        rgba(250, 200, 167, 0.219),
-        rgba(250, 135, 69, 0.3)
-        );
-    margin: 0px;
-    padding: 0px;
-}
-
 button {
     font-size: 1em;
     font-weight: bold;
@@ -141,7 +133,7 @@ header {
     transition: 0.7s ease;
     flex-direction: column;
     align-items: center;  
-    /* display: flex; */
+    display: flex; 
 }
 header:hover {
     box-shadow: 2px 2px 10px orange;
@@ -427,6 +419,9 @@ footer a:hover {
     flex-direction: column;
 }
 @media (min-width: 720px) {
+html { 
+        width: 100%;
+    }
 header {
     position: fixed;
     width: 100%;
@@ -440,6 +435,7 @@ body{
 header .container {
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 header nav {
     flex-direction: row;
@@ -449,6 +445,7 @@ header nav {
 header .logo {
     text-align: left;
     align-items: left;
+    justify-content: left;
 }
 
 #post {
