--- a/Style.css
+++ b/Style.css
@@ -123,10 +123,12 @@ button:hover {
 header {
     background-image: linear-gradient(
         10000000000000000000000deg,
-        rgba(0, 1, 0, 0.9),
+        rgba(0, 1, 0, 0.4),
         rgba(88, 87, 87, 0.5)
-        ) ,url(img/wall.jpg);
+        ) ,url(img/Wall.jfif);
         background-position: center;
+        justify-self: center;
+        object-fit: cover;
     color: orangered;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.9);
     transition: 0.7s ease;
