--- a/Style.css
+++ b/Style.css
@@ -56,13 +56,19 @@ body {
     display: flex;
     flex-direction: row;
     font-size: 3rem;
+    transition: .7s ease;
 }
-#titulo:hover {
+#titulo h1:hover {
+    transform: scale(1.3);
+    text-shadow: 2px 2px 10px orange;
+    transition: .7s ease;
+}
+/* #titulo:hover {
     box-shadow: 2px 2px 7px orange;
     transition: 0.9s ease;
     color: orange;
     opacity: 0.7;
-}
+} */
 button {
     font-size: 1em;
     font-weight: bold;
